[package]
name = "imagen3-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-util = "0.7.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
image = "0.24.8"
directories = "5.0.1"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
chrono = "0.4"
